Add a dummy text inside the display section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 <body>
     <div class="calculator">
-        <div class="display"></div>
+        <div class="display">
+            <div class="stored-value">2</div>
+            <div class="current-value">1</div>
+        </div>
         <div class="btns-cntr">
             <div class="btns-divider">
                 <button class="clear-btn">Clear</button>
