--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="calculator">
         <div class="display">
-            <div class="stored-value">2</div>
+            <div class="stored-value"></div>
             <div class="current-value">0</div>
         </div>
         <div class="btns-cntr">
