--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <body>
     <div class="calculator">
-        <div class="display">
+        <div class="screen">
             <div class="stored-value"></div>
-            <div class="current-value">0</div>
+            <div class="displayed-value">0</div>
         </div>
         <div class="btns-cntr">
             <div class="btns-divider">
