Add clear- and undo-btn

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="btns-cntr">
             <div class="btns-divider">
                 <button class="clear-btn">Clear</button>
-                <button class="delete-btn">Delete</button>
+                <button class="undo-btn">Undo</button>
             </div>
             <div class="btns-divider">
                 <button class="numbers-btn" value="9">9</button>
