Style the calculator and add footer

--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
 </head>
 
 <body>
-    <div class="calculator">
-        <div class="screen">
-            <div class="stored-value"></div>
-            <div class="displayed-value">0</div>
-        </div>
-        <div class="btns-cntr">
-            <div class="btns-divider">
+    <main>
+        <div class="calculator">
+            <div class="screen">
+                <div class="stored-value"></div>
+                <div class="displayed-value">0</div>
+            </div>
+            <div class="btns-cntr">
                 <button class="clear-btn">Clear</button>
                 <button class="undo-btn">Undo</button>
-            </div>
-            <div class="btns-divider">
+
                 <button class="numbers-btn" value="9">9</button>
                 <button class="numbers-btn" value="8">8</button>
                 <button class="numbers-btn" value="7">7</button>
@@ -40,8 +39,10 @@
                 <button class="operators-btn" value="+">+</button>
             </div>
         </div>
-    </div>
-    </div>
+    </main>
+    <footer>
+        <p class="footer-text">Copyright © 2022 <a href="https://github.com/neil-justin">Neil Justin Mallari</a></p>
+    </footer>
 </body>
 
 </html>
